logs/ng.app.quota.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ng'...
Listing './lib/python3.5/site-packages/ng/adapter'...
Listing './lib/python3.5/site-packages/ng/adapter/adaptiveurl'...
Listing './lib/python3.5/site-packages/ng/adapter/adaptiveurl/browser'...
Listing './lib/python3.5/site-packages/ng/adapter/breadcrumb'...
Listing './lib/python3.5/site-packages/ng/adapter/checksublocation'...
Listing './lib/python3.5/site-packages/ng/adapter/checktocontain'...
Listing './lib/python3.5/site-packages/ng/adapter/etc'...
Listing './lib/python3.5/site-packages/ng/adapter/ianytitle'...
Compiling './lib/python3.5/site-packages/ng/adapter/ianytitle/ianytitleadapter.py'...
***   File "./lib/python3.5/site-packages/ng/adapter/ianytitle/ianytitleadapter.py", line 37
    except Exception, msg :
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ng/adapter/mtime'...
Listing './lib/python3.5/site-packages/ng/adapter/namechooser'...
Compiling './lib/python3.5/site-packages/ng/adapter/namechooser/namechooser.py'...
***   File "./lib/python3.5/site-packages/ng/adapter/namechooser/namechooser.py", line 35
    except TypeError,msg :
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ng/adapter/nsinterface'...
Listing './lib/python3.5/site-packages/ng/adapter/nullsublocations'...
Listing './lib/python3.5/site-packages/ng/adapter/pager'...
Compiling './lib/python3.5/site-packages/ng/adapter/pager/pageradapter.py'...
***   File "./lib/python3.5/site-packages/ng/adapter/pager/pageradapter.py", line 102
    except Exception,msg :
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ng/adapter/path'...
Listing './lib/python3.5/site-packages/ng/adapter/recordsize'...
Listing './lib/python3.5/site-packages/ng/adapter/requestcache'...
Listing './lib/python3.5/site-packages/ng/adapter/requestext'...
Compiling './lib/python3.5/site-packages/ng/adapter/requestext/libIIGFS.py'...
***   File "./lib/python3.5/site-packages/ng/adapter/requestext/libIIGFS.py", line 83
    raise 'NotFound', "Объект %s не существует" % start_id
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ng/adapter/title'...
Listing './lib/python3.5/site-packages/ng/adapter/toolchanger'...
Compiling './lib/python3.5/site-packages/ng/adapter/toolchanger/toolurl.py'...
***   File "./lib/python3.5/site-packages/ng/adapter/toolchanger/toolurl.py", line 34
    except Exception,msg :
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ng/app'...
Listing './lib/python3.5/site-packages/ng/app/quota'...
Listing './lib/python3.5/site-packages/ng/app/quota/browser'...
Compiling './lib/python3.5/site-packages/ng/app/quota/browser/histogram.py'...
***   File "./lib/python3.5/site-packages/ng/app/quota/browser/histogram.py", line 68
    print a
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ng/app/quota/browser/quotareindex.py'...
***   File "./lib/python3.5/site-packages/ng/app/quota/browser/quotareindex.py", line 35
    except Exception, msg :
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ng/app/quota/demo'...
Listing './lib/python3.5/site-packages/ng/app/quota/etc'...
Compiling './lib/python3.5/site-packages/ng/app/quota/quota.py'...
***   File "./lib/python3.5/site-packages/ng/app/quota/quota.py", line 57
    except ComponentLookupError,msg:
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ng/app/quota/quotahandle'...
Compiling './lib/python3.5/site-packages/ng/app/quota/quotahandle/handle.py'...
***   File "./lib/python3.5/site-packages/ng/app/quota/quotahandle/handle.py", line 22
    except AttributeError,msg :
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ng.adapter-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/ng.app.quota-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/pd'...
Listing './lib/python3.5/site-packages/pd/lib'...
Compiling './lib/python3.5/site-packages/pd/lib/fuzzyobject.py'...
***   File "./lib/python3.5/site-packages/pd/lib/fuzzyobject.py", line 24
    except AttributeError,msg :
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pd/lib/fuzzyobject_sample.py'...
***   File "./lib/python3.5/site-packages/pd/lib/fuzzyobject_sample.py", line 38
    print ob.name,ob.agg
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pd/lib/linear_quantizator.py'...
***   File "./lib/python3.5/site-packages/pd/lib/linear_quantizator.py", line 99
    print x,y
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pd/lib/topsort.py'...
***   File "./lib/python3.5/site-packages/pd/lib/topsort.py", line 50
    raise UnknownDependency, "Unknown dependency %s of %s" % (dep, obj)
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pd/lib/utility.py'...
***   File "./lib/python3.5/site-packages/pd/lib/utility.py", line 19
    except Exception, msg:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pd.lib-0.0.9.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
